feat(api): /search?q=_
